# TwoAC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TwoAC.sln
TwoAC/: Dual_Number.h  TwoAC.vcxproj  TwoAC.vcxproj.filters  camera.cpp  camera.h  main.cpp  numeric.cpp  numeric.h  regions.cpp  regions.h  solver_essential_five_point.cpp  solver_essential_five_point.h  solver_essential_two_ac.h  theia_wrapper.h  types.h
data/sarok_1/: camA.jpg.intrinsics  camA.jpg.lafs  camB.jpg.lafs  pairwise_0000_0001.matches
data/stre_f/: camA.jpg.intrinsics  pairwise_0000_0001.matches
